--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "io.realm:realm-gradle-plugin:2.2.0"
     }
 }
 
@@ -20,4 +20,26 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    minSdkVersion = 18
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.0'
+
+    // App dependencies
+    guavaVersion = '18.0'
+    supportLibVersion = "26.0.0-alpha1"
+    firebaseVersion = "10.0.1"
+    junitVersion = "4.12"
+    mockitoVersion = "1.10.19"
+    powerMockito = "1.6.2"
+    hamcrestVersion = "1.3"
+    runnerVersion = "0.5"
+    rulesVersion = "0.5"
+    espressoVersion = "2.2.2"
+    butterknifeVersion = "8.4.0"
 }
