[SPA-2] 카카오톡 로그인 기능 구현 (상세 UI 제외)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/SSUPartyTheme.NoActionBar">
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key" />
+
         <activity android:name=".ui.main.MainActivity">
+        </activity>
+        <activity android:name=".ui.account.AccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
