--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "io.realm:realm-gradle-plugin:2.2.0"
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
