--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".BaseApplication"
+        android:name=".GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,10 +17,8 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
 
-        <activity android:name=".ui.main.MainActivity">
-        </activity>
-        <activity android:name=".ui.account.AccountActivity">
-        </activity>
+        <activity android:name=".ui.main.MainActivity"/>
+        <activity android:name=".ui.account.AccountActivity"/>
 
         <service android:name=".service.SPFirebaseMessagingService">
             <intent-filter>
@@ -40,6 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".TokenExpiredChecker"/>
     </application>
 
 </manifest>
