--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,9 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
+
+    compile 'me.gujun.android.taggroup:library:1.4@aar'
+    compile 'com.github.mabbas007:TagsEditText:1.0.5'
+    compile 'com.github.qiugang:EditTag:v1.2.4-beta2'
+
 }
