--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,14 +61,15 @@ dependencies {
 
     compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.4.0'
 
+
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
-
     compile 'me.gujun.android.taggroup:library:1.4@aar'
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
     compile 'com.github.qiugang:EditTag:v1.2.4-beta2'
-
+    compile 'com.android.support:support-v4:26.+'
 }
