--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,6 @@
             android:value="@string/kakao_app_key" />
 
         <activity android:name=".ui.main.MainActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
 
 
@@ -46,8 +41,13 @@
 
         <receiver android:name=".TokenExpiredChecker" />
 
-        <activity android:name=".ui.signup.SignupActivity">
+        <activity android:name=".ui.signup.SignupActivity"
+            android:theme="@style/SSUPartyTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
