--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
     compile 'com.github.qiugang:EditTag:v1.2.4-beta2'
     compile 'com.android.support:support-v4:26.+'
+
+    compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.18.0'
 }
