--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
 
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+
+    compile 'com.github.bumptech.glide:glide:3.6.0'
 }
