--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
 
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.squareup:otto:1.3.8'
 }
