--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,13 +54,15 @@ dependencies {
     compile 'com.google.firebase:firebase-core:' + rootProject.firebaseVersion;
     compile 'com.google.firebase:firebase-messaging:' + rootProject.firebaseVersion;
     compile 'com.google.firebase:firebase-crash:' + rootProject.firebaseVersion;
-    compile 'com.google.firebase:firebase-database:'+ rootProject.firebaseVersion;
+    compile 'com.google.firebase:firebase-database:' + rootProject.firebaseVersion;
     compile 'com.google.guava:guava:' + rootProject.guavaVersion;
 
     compile 'com.jakewharton:butterknife:' + rootProject.butterknifeVersion;
     annotationProcessor 'com.jakewharton:butterknife-compiler:' + rootProject.butterknifeVersion;
 
     compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.4.0'
+
+
 
 
 
@@ -73,10 +75,12 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
     compile 'com.github.qiugang:EditTag:v1.2.4-beta2'
     compile 'com.android.support:support-v4:26.+'
-
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
-
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.0'
+
+
 }
