--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,11 +68,12 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
     compile 'com.github.qiugang:EditTag:v1.2.4-beta2'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.0'
     compile 'co.lujun:androidtagview:1.1.4'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
 }
