--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,9 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.squareup:otto:1.3.8'
-    compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.0'
     compile 'co.lujun:androidtagview:1.1.4'
     compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
+
 }
