--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,6 @@ dependencies {
     compile 'co.lujun:androidtagview:1.1.4'
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
+    compile 'me.gujun.android.taggroup:library:1.4@aar'
 
 }
