--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/SSUPartyTheme.NoActionBar">
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -30,7 +31,7 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity android:name=".ui.createparty.CreatePartyActivity" />
-        <activity android:name=".ui.account.AccountActivity"></activity>
+        <activity android:name=".ui.account.AccountActivity" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -60,13 +61,18 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.signup.SignupActivity"
             android:theme="@style/SSUPartyTheme.NoActionBar" />
 
+        <activity android:name=".ui.partydetail.PartyDetailActivity">
+
+        </activity>
     </application>
 
 </manifest>
