--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/SSUPartyTheme.NoActionBar">
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -27,7 +26,6 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
@@ -62,15 +60,15 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.signup.SignupActivity"
             android:theme="@style/SSUPartyTheme.NoActionBar" />
-
-        <activity android:name=".ui.partydetail.PartyDetailActivity"></activity>
+        <activity android:name=".ui.partydetail.PartyDetailActivity" />
+        <activity android:name=".ui.unionsearchlist.UnionSearchListActivity"></activity>
     </application>
 
 </manifest>
